fix agent template and routes

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -66,7 +66,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{url_for('business.get_business')}}">
           <i class="fas fa-fw fa-user"></i>
           <span>Agents</span></a>
       </li>
