--- a/dashboard/templates/business.html
+++ b/dashboard/templates/business.html
@@ -15,7 +15,7 @@
   <div class="card shadow mb-4">
     <div class="card-header py-3">
       <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Business</a>
+        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Agent</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -25,12 +25,12 @@
               <th>Id</th>
               <th>First Name</th>
               <th>Last Name</th>
-              <th>Email</th>
+              <th>Service</th>
               <!-- <th>Password</th> -->
               <th>Phone Number</th>
               <th>Business Name</th>
               <th>Address</th>
-              <th>CreatedAt</th>
+              <th>Availability time</th>
               <th>Action</th>
             </tr>
           </thead>
@@ -69,7 +69,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit business</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Agent</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
