--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -72,7 +72,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{{url_for('farmer.get_farmer')}}">
           <i class="fas fa-fw fa-comments"></i>
           <span>Customers</span></a>
       </li>
