--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -67,56 +67,67 @@
             </tr>
 
             <!-- edit Modal-->
-            <div class="modal fade" id="editModal" tabindex="-1" role="dialog"
-              aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Order</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">×</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <form action="" method="POST">
-                      <div class="form-row">
-                        <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Choose Business :</label>
-                          <select class="form-control" id="exampleFormControlSelect1" name="BusinesName">
-                            <option value=""></option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleFormControlSelect1">Choose crop :</label>
-                        <select class="form-control" id="exampleFormControlSelect1" name="Crop">
-                          <option value=""></option>
-                        </select>
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleFormControlSelect1">Choose Quantity :</label>
-                        <select class="form-control" id="exampleFormControlSelect1" name="Qty">
-                          <option value=""></option>
-                        </select>
-                      </div>
-                      <div class="form-group">
-                        <label for="inputAddress">Price :</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder=""
-                          name="Price">
-                      </div>
-                      <div class="form-group">
-                        <label for="inputAddress2">Order Time :</label>
-                        <input type="date" class="form-control" id="inputAddress2" name="Ordertime">
-                      </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <button class="btn btn-primary" type="submit">Submit</button>
-                  </div>
-                  </form>
+            <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Insert Order</h5>
+                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                  </button>
                 </div>
+                <div class="modal-body">
+                  <form action="" method="POST">
+                    <div class="form-row">
+                      <div class="form-group col-md-12">
+                        <label for="exampleFormControlSelect1">Customer Name:</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer name " name="CustomerName">
+                      </div>
+                      <div class="form-group col-md-12">
+                        <label for="exampleFormControlSelect1">Customer Phone Number:</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Phone " name="CustomerPhone">
+                      </div>
+                      <div class="form-group col-md-12">
+                        <label for="exampleFormControlSelect1">Customer Address :</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Address " name="CustomerAddress">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Choose Services :</label>
+                      <select class="form-control" id="exampleFormControlSelect1" name="Services">
+                        <option value=""></option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Choose Agent :</label>
+                      <select class="form-control" id="exampleFormControlSelect1" name="Agent">
+                        <option value=""></option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlSelect1">Choose Order Status :</label>
+                      <select class="form-control" id="exampleFormControlSelect1" name="OrderStatus">
+                        <option value=""></option>
+                      </select>
+                    </div>
+                    <!-- <div class="form-group">
+                      <label for="inputAddress">Price :</label>
+                      <input type="text" class="form-control" id="inputAddress" placeholder="Insert Price" name="Price">
+                    </div> -->
+                    <div class="form-group">
+                      <label for="inputAddress2">Selected Date :</label>
+                      <input type="date" class="form-control" id="inputAddress2" name="Ordertime">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                  <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+                </form>
               </div>
             </div>
+          </div>
 
 
             <!-- edit Modal-->
