--- a/dashboard/templates/extraservices.html
+++ b/dashboard/templates/extraservices.html
@@ -16,7 +16,7 @@
   <div class="card shadow mb-4">
     <div class="card-header py-3">
       <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Services</a>
+        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Extra Services</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -40,7 +40,7 @@
                     </tr>
                   </tfoot> -->
           <tbody>
-            {% for item in ServiceItems %}
+            {% for item in ExtraServiceItems %}
             <tr>
               <td>{{ item.IdService }}</td>
               <td>{{ item.Name }}</td>
@@ -63,16 +63,16 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Extra services</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="{{url_for('services.edit_service', IdService = item.IdService )}}" method="POST">
+                    <form action="{{url_for('extraservices.edit_extraservices', IdService = item.IdService )}}" method="POST">
                       <div class="form-row">
                         <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Insert services :</label>
+                          <label for="exampleFormControlSelect1">Insert Extra services :</label>
                           <input type="text" class="form-control" value="{{ item.Name }}" name="ServiceName">
                         </div>
                       </div>
@@ -110,7 +110,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Extra Services</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
@@ -118,7 +118,7 @@
                   <div class="modal-body">Are you sure you want to delete {{ item.Name }} ?</div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="{{url_for('services.delete_service', IdService = item.IdService)}}">Delete</a>
+                    <a class="btn btn-primary" href="{{url_for('extraservices.delete_extraservices', IdService = item.IdService)}}">Delete</a>
                   </div>
                 </div>
               </div>
@@ -147,17 +147,17 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Insert Services</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Insert Extra Services</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
       <div class="modal-body">
-        <form action="{{ url_for('services.add_service')}}" method="POST">
+        <form action="{{ url_for('extraservices.add_extraservices')}}" method="POST">
           <div class="form-row">
             <div class="form-group col-md-12">
               <label for="exampleFormControlSelect1">Insert Services :</label>
-              <input type="text" class="form-control" placeholder="Service name" name="ServiceName">
+              <input type="text" class="form-control" placeholder="Extra Service name" name="ServiceName">
             </div>
           </div>
           <div class="form-row">
