--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -94,6 +94,18 @@
       </li>
 
       <li class="nav-item">
+        <a class="nav-link" href="{{url_for('extraservices.get_extraservices')}}">
+          <i class="fa fa-plus-square"></i>
+          <span>Extra Services</span></a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('priority.get_priority')}}">
+          <i class="fa fa-ambulance"></i>
+          <span>Priority</span></a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="{{url_for('role.get_role')}}">
           <i class="fas fa-fw fa-tags"></i>
           <span>Roles</span></a>
