--- a/dashboard/templates/priority.html
+++ b/dashboard/templates/priority.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-<!-- End of Topbar -->
 
 <!-- Begin Page Content -->
 <div class="container-fluid">
@@ -16,7 +15,7 @@
   <div class="card shadow mb-4">
     <div class="card-header py-3">
       <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Services</a>
+        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Priority</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -24,9 +23,7 @@
           <thead>
             <tr>
               <th>Id</th>
-              <th>Name</th>
-              <th>Price</th>
-              <th>Status</th>
+              <th>Priority</th>
               <th>CreatedAt</th>
               <th>Action</th>
             </tr>
@@ -40,62 +37,47 @@
                     </tr>
                   </tfoot> -->
           <tbody>
-            {% for item in ServiceItems %}
+            {% for item in PriorityItems %}
             <tr>
-              <td>{{ item.IdService }}</td>
-              <td>{{ item.Name }}</td>
-              <td>{{ item.Price }} SDG</td>
-              <td>{{ item.situation.Situation }}</td>
+              <td>{{ item.IdPriority }}</td>
+              <td>{{ item.PriorityName }}</td>
               <td>{{ item.CreatedAt }}</td>
               <td>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#editModal{{ item.IdService }}"><i class="fas fa-edit fa-sm text-white-50"></i>
+                  data-target="#editModal{{ item.IdPriority }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit </a>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#deleteModal{{ item.IdService }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
-                  Delete </a>
+                  data-target="#deleteModal{{ item.IdPriority }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
+                  Delete
+                </a>
               </td>
             </tr>
 
+
             <!-- edit Modal-->
-            <div class="modal fade" id="editModal{{ item.IdService }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="editModal{{ item.IdPriority }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Priority</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="{{url_for('services.edit_service', IdService = item.IdService )}}" method="POST">
-                      <div class="form-row">
-                        <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Insert services :</label>
-                          <input type="text" class="form-control" value="{{ item.Name }}" name="ServiceName">
-                        </div>
-                      </div>
-                      <div class="form-row">
-                        <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Insert Price :</label>
-                          <input type="number" class="form-control" value="{{ item.Price }}" name="Price">
-                        </div>
-                      </div>
-                      <div class="form-row">
-                        <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Choose status :</label>
-                          <select id="inputState" class="form-control" name="Status">
-                            {% for item in SituationItems %}
-                            <option value="{{ item.IdSituation }}">{{ item.Situation }}</option>
-                            {% endfor %}
-                          </select>
+                    <form action="{{url_for('priority.edit_priority', IdPriority = item.IdPriority )}}" method="POST">
+                      <div class="row">
+                        <div class="col">
+                          <label for="exampleFormControlSelect1">Insert Priority :</label>
+                          <input type="text" class="form-control" value="{{ item.PriorityName }}"
+                            name="PriorityName">
                         </div>
                       </div>
                   </div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <button class="btn btn-primary" type="submit">Edit</button>
+                    <button class="btn btn-primary" type="submit">Submit</button>
                   </div>
                   </form>
                 </div>
@@ -103,27 +85,26 @@
             </div>
 
 
-
             <!-- delete Modal-->
-            <div class="modal fade" id="deleteModal{{ item.IdService }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="deleteModal{{ item.IdPriority }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Priority</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
                   </div>
-                  <div class="modal-body">Are you sure you want to delete {{ item.Name }} ?</div>
+                  <div class="modal-body">Are you sure you want to delete {{ item.PriorityName}} ?</div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="{{url_for('services.delete_service', IdService = item.IdService)}}">Delete</a>
+                    <a class="btn btn-primary"
+                      href="{{url_for('priority.delete_priority', IdPriority = item.IdPriority )}}">Delete</a>
                   </div>
                 </div>
               </div>
             </div>
-
             {% endfor %}
           </tbody>
         </table>
@@ -135,11 +116,17 @@
 <!-- /.container-fluid -->
 
 </div>
+<!-- End of Main Content -->
+
+<!-- Footer -->
+
+<!-- End of Footer -->
 
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
   <i class="fas fa-angle-up"></i>
 </a>
+
 
 <!-- insert Modal-->
 <div class="modal fade" id="insertModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -147,34 +134,17 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Insert Services</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Insert Priority</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
       <div class="modal-body">
-        <form action="{{ url_for('services.add_service')}}" method="POST">
-          <div class="form-row">
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Insert Services :</label>
-              <input type="text" class="form-control" placeholder="Service name" name="ServiceName">
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Insert Price :</label>
-              <input type="number" class="form-control" placeholder="Insert Price" name="Price">
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Choose status :</label>
-              <select id="inputState" class="form-control" name="Status">
-                <option selected>Choose...</option>
-                {% for item in SituationItems %}
-                <option value="{{ item.IdSituation }}">{{ item.Situation }}</option>
-                {% endfor %}
-              </select>
+        <form action="{{url_for('priority.add_priority')}}" method="POST">
+          <div class="row">
+            <div class="col">
+              <label for="exampleFormControlSelect1">Insert Priority :</label>
+              <input type="text" class="form-control" placeholder="Insert Priority"  name="PriorityName">
             </div>
           </div>
       </div>
@@ -186,5 +156,4 @@
     </div>
   </div>
 </div>
-
 {% endblock content %}
