fix model and remove price model

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -21,7 +21,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <div class="text-xs font-weight-bold text-success text-uppercase mb-1">#of Orders</div>
-              <div class="h5 mb-0 font-weight-bold text-gray-800">40,000</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">{{ OrdersNumbers }}</div>
             </div>
             <div class="col-auto">
               <i class="fas fa-truck fa-2x text-gray-300"></i>
@@ -86,7 +86,7 @@
             <div class="col mr-2">
               <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">#of Customers
               </div>
-              <div class="h5 mb-0 font-weight-bold text-gray-800">3,000</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">{{ BusinessNumbers }}</div>
             </div>
             <div class="col-auto">
               <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -105,7 +105,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">#of Services</div>
-              <div class="h5 mb-0 font-weight-bold text-gray-800">15</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">{{ ServiceNumbers }}</div>
             </div>
             <div class="col-auto">
               <i class="fas fa-cogs fa-2x text-gray-300"></i>
@@ -122,7 +122,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <div class="text-xs font-weight-bold text-success text-uppercase mb-1">#of Users</div>
-              <div class="h5 mb-0 font-weight-bold text-gray-800">4</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">{{ UsersNumbers }}</div>
             </div>
             <div class="col-auto">
               <i class="fas fa-user-circle fa-2x text-gray-300"></i>
