--- a/dashboard/templates/order_status.html
+++ b/dashboard/templates/order_status.html
@@ -70,7 +70,7 @@
                       <div class="row">
                         <div class="col">
                           <label for="exampleFormControlSelect1">Insert Status :</label>
-                          <input type="text" class="form-control" placeholder="{{ item.OrderStatus }}"
+                          <input type="text" class="form-control" value="{{ item.OrderStatus }}"
                             name="OrderStatusName">
                         </div>
                       </div>
