--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -62,7 +62,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('orders.get_order')}}">
           <i class="fas fa-fw fa-truck"></i>
-          <span>Orders</span></a>
+          <span>Orders Maintenance</span></a>
       </li>
 
       <li class="nav-item">
