--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -15,7 +15,7 @@
   <div class="card shadow mb-4">
     <div class="card-header py-3">
       <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Order</a>
+        data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Order Maintenance</a>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -43,36 +43,37 @@
                         </tr>
                       </tfoot> -->
           <tbody>
+            {% for item in OrdersItems %}
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>{{ item.OrderNumber }}</td>
+              <td>{{ item.FirstName }}</td>
+              <td>{{ item.PhoneNumber }}</td>
+              <td>{{ item.Address }}</td>
+              <td>{{ item.service.Name }}</td>
+              <td>{{ item.Ordertime }}</td>
+              <td>{{ item.Price }}</td>
+              <td>{{ item.status.OrderStatus }}</td>
+              <td>{{ item.CreatedAt }}</td>
               <td>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#editModal"><i class="fas fa-edit fa-sm text-white-50"></i>
+                  data-target="#editModal{{ item.IdOrder }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit </a>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#editStatusModal"><i class="fas fa-edit fa-sm text-white-50"></i>
+                  data-target="#editStatusModal{{ item.IdOrder }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit Status </a>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#deleteModal"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
+                  data-target="#deleteModal{{ item.IdOrder }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
                   Delete </a>
               </td>
             </tr>
 
             <!-- edit Modal-->
-            <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="editModal{{ item.IdOrder }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Insert Order</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Edit Maintenance Order</h5>
                   <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                   </button>
@@ -82,15 +83,15 @@
                     <div class="form-row">
                       <div class="form-group col-md-12">
                         <label for="exampleFormControlSelect1">Customer Name:</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer name " name="CustomerName">
+                        <input type="text" class="form-control" id="inputAddress" value="{{ item.FirstName }}" name="CustomerName">
                       </div>
                       <div class="form-group col-md-12">
                         <label for="exampleFormControlSelect1">Customer Phone Number:</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Phone " name="CustomerPhone">
+                        <input type="text" class="form-control" id="inputAddress" value="{{ item.PhoneNumber }}" name="CustomerPhone">
                       </div>
                       <div class="form-group col-md-12">
                         <label for="exampleFormControlSelect1">Customer Address :</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Address " name="CustomerAddress">
+                        <input type="text" class="form-control" id="inputAddress" placeholder="{{ item.Address }}" name="CustomerAddress">
                       </div>
                     </div>
                     <div class="form-group">
@@ -105,19 +106,19 @@
                         <option value=""></option>
                       </select>
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                       <label for="exampleFormControlSelect1">Choose Order Status :</label>
                       <select class="form-control" id="exampleFormControlSelect1" name="OrderStatus">
                         <option value=""></option>
                       </select>
-                    </div>
+                    </div> -->
                     <!-- <div class="form-group">
                       <label for="inputAddress">Price :</label>
                       <input type="text" class="form-control" id="inputAddress" placeholder="Insert Price" name="Price">
                     </div> -->
                     <div class="form-group">
                       <label for="inputAddress2">Selected Date :</label>
-                      <input type="date" class="form-control" id="inputAddress2" name="Ordertime">
+                      <input type="date" class="form-control" id="inputAddress2" name="Ordertime" value="{{ item.Ordertime }}">
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -130,8 +131,8 @@
           </div>
 
 
-            <!-- edit Modal-->
-            <div class="modal fade" id="" tabindex="-1" role="dialog"
+            <!-- edit Status Modal-->
+            <div class="modal fade" id="editStatusModal{{ item.IdOrder }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -142,11 +143,13 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="" method="POST">
+                    <form action="{{url_for('orders.edit_status_order', IdOrder = item.IdOrder )}}" method="POST">
                       <div class="form-group">
                         <label for="exampleFormControlSelect1">Edit Status :</label>
                         <select class="form-control" id="exampleFormControlSelect1" name="OrderStatusName">
-                          <option value=""></option>
+                          {% for item in OrderStatusItems %}
+                          <option value="{{ item.IdOrderStatus }}">{{ item.OrderStatus }}</option>
+                          {% endfor %}
                         </select>
                       </div>
                   </div>
@@ -160,28 +163,26 @@
             </div>
 
 
-
-
-
             <!-- delete Modal-->
-            <div class="modal fade" id="" tabindex="-1" role="dialog"
+            <div class="modal fade" id="deleteModal{{ item.IdOrder }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Order</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Maintenance Order</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
                   </div>
-                  <div class="modal-body">Are you sure you want to delete  ?</div>
+                  <div class="modal-body">Are you sure you want to delete {{ item.OrderNumber }} ?</div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="">Delete</a>
+                    <a class="btn btn-primary" href="{{url_for('orders.delete_order', IdOrder = item.IdOrder )}}">Delete</a>
                   </div>
                 </div>
               </div>
             </div>
+            {% endfor %}
           </tbody>
         </table>
       </div>
@@ -206,7 +207,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Insert Order</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Insert Maintenance Order</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
