--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -227,10 +227,20 @@
               <label for="exampleFormControlSelect1">Customer Address :</label>
               <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Address " name="CustomerAddress">
             </div>
+            <div class="form-group col-md-12">
+              <label for="exampleFormControlSelect1">Customer Email :</label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Email " name="CustomerEmail">
+            </div>
           </div>
           <div class="form-group">
             <label for="exampleFormControlSelect1">Choose Services :</label>
             <select class="form-control" id="exampleFormControlSelect1" name="Services">
+              <option value=""></option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Choose Priority  :</label>
+            <select class="form-control" id="exampleFormControlSelect1" name="Priority">
               <option value=""></option>
             </select>
           </div>
@@ -241,8 +251,8 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="exampleFormControlSelect1">Choose Order Status :</label>
-            <select class="form-control" id="exampleFormControlSelect1" name="OrderStatus">
+            <label for="exampleFormControlSelect1">Choose Time :</label>
+            <select class="form-control" id="exampleFormControlSelect1" name="Time">
               <option value=""></option>
             </select>
           </div>
