--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -190,13 +190,9 @@
   </div>
 
 </div>
-<!-- /.container-fluid -->
 
 </div>
-<!-- End of Main Content -->
 
-
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
   <i class="fas fa-angle-up"></i>
 </a>
@@ -213,7 +209,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="" method="POST">
+        <form action="{{url_for('orders.add_order')}}" method="POST">
           <div class="form-row">
             <div class="form-group col-md-12">
               <label for="exampleFormControlSelect1">First Name:</label>
