change time icon

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -101,7 +101,7 @@
 
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('time.get_time')}}">
-          <i class="fa fa-plus-square"></i>
+          <i class="fa fa-clock"></i>
           <span>Working Time</span></a>
       </li>
 
