add order cleaning from the dashbaord

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -60,6 +60,12 @@
       </div>
 
       <li class="nav-item">
+        <a class="nav-link" href="{{url_for('ordercleaning.get_order')}}">
+          <i class="fas fa-fw fa-briefcase"></i>
+          <span>Orders Cleaning</span></a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="{{url_for('orders.get_order')}}">
           <i class="fas fa-fw fa-truck"></i>
           <span>Orders Maintenance</span></a>
@@ -136,20 +142,6 @@
       </li>
 
 
-      <!-- Nav Item - Charts -->
-
-      <!-- <li class="nav-item active">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePagesFeed" aria-expanded="true"
-          aria-controls="collapsePagesFeed">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Reports</span></a>
-        </a>
-        <div id="collapsePagesFeed" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="">Feedback</a>
-          </div>
-        </div>
-      </li> -->
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
